# stock_view

./: README.md  app.py  pyproject.toml  requirements.txt
utils/: chart_utils.py  data_fetcher.py  financial_metrics.py  news_fetcher.py
