[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "requests>=2.32.4",
    "streamlit>=1.48.0",
    "trafilatura>=2.0.0",
    "xlsxwriter>=3.2.5",
    "yfinance>=0.2.65",
]
